# lsp

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  PRIVACY_POLICY.md  README.md  RELEASE_CHECKLIST.md  build.gradle.kts  build_and_test_array.sh  build_and_test_destroy.sh  gradle.properties  settings.gradle.kts  simple_compile_test.sh  test_compile.sh
.github/: WORKFLOWS_SETUP.md
.github/workflows/: android-ci.yml  android-deploy.yml
android-app/: build.gradle.kts  proguard-rules-release.pro  test_jni_bridge_arm64.sh
android-app/docs/: abi-selection-testing.md  arm64-v8a-optimization-verification.md  device-change-handling.md  fpic-configuration.md  jni-bridge-architecture-verification.md  jni-bridge-manual-test-guide.md  jni-bridge-testing.md  oboe-integration-summary.md  oboe-integration.md  performance-optimization.md  realtime-thread-priority.md  tablet-layout.md  task-2.1-jni-bridge-verification-summary.md  task-3.5-implementation-summary.md
android-app/src/androidTest/java/com/example/lspandroid/: JniBridgeArchitectureTest.kt  JniBridgeInstrumentedTest.kt
android-app/src/main/: AndroidManifest.xml
android-app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeCache.txt  CMakeLists.txt  CpuFeatures.cpp  CpuFeatures.h  DSP_ARM64_COMPILATION_REPORT.md  ParameterQueue.h  QUICK_START_X86_64.md  README_TEST_HARNESS_BUILD.md  README_TEST_HARNESS_X86_64.md  SimdOps.cpp  SimdOps.h  TEST_HARNESS_X86_64_SUMMARY.md  access.txt  build_all_test_harnesses.sh  build_and_test_compare.sh  build_and_test_delay.sh  build_test_harness_arm64.sh  build_test_harness_armeabi_v7a.sh  build_test_harness_x86_64.sh  build_test_harnesses.sh  jni_bridge.cpp  jni_bridge_minimal.cpp  lsp_audio_engine_stub.cpp  test_alloc.cpp  test_core_alloc.cpp  test_dsp_array.cpp  test_dsp_compare  test_dsp_compare.cpp  test_dsp_delay.cpp  test_harness_arm64.cpp  test_harness_x86_64.cpp  test_jni_bridge_architectures.cpp  verify_architectures.sh  verify_copy_operations.sh  verify_delay_port.sh  verify_dsp_arm64_compilation.sh  verify_fpic.sh  verify_gc_sections.sh  (+7 more)
android-app/src/main/cpp/build_dsp_arm64_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
android-app/src/main/cpp/lsp-plugins/: PLUGIN_PORT_ANALYSIS.md  PLUGIN_PORT_CHECKLIST.md
android-app/src/main/cpp/lsp-plugins/include/core/: debug.h  types.h
android-app/src/main/cpp/lsp-plugins/include/dsp/: alloc.h  bits.h  compare.h  dsp.h
android-app/src/main/cpp/lsp-plugins/src/core/: IPort.cpp  IStateDumper.cpp  IWrapper.cpp  JsonDumper.cpp  KVTStorage.cpp  LSPString.cpp  PORTING_NOTES.md  alloc.cpp  buffer.cpp  debug.cpp  envelope.cpp  fade.cpp  init.cpp  interpolation.cpp  parse.cpp  plugin.cpp  port_data.cpp  resource.cpp  status.cpp  system.cpp  types.cpp  url.cpp
android-app/src/main/cpp/lsp-plugins/src/core/io/: Dir.cpp  File.cpp  IInStream.cpp  IOutSequence.cpp  IOutStream.cpp  InFileStream.cpp  InMemoryStream.cpp  InSequence.cpp  NativeFile.cpp  OutFileStream.cpp  OutMemoryStream.cpp  OutSequence.cpp  Path.cpp  StdioFile.cpp
android-app/src/main/cpp/lsp-plugins/src/core/ipc/: IExecutor.cpp  ITask.cpp  Library.cpp  Mutex.cpp  NativeExecutor.cpp  Thread.cpp
android-app/src/main/cpp/lsp-plugins/src/core/stdlib/: stdio.cpp
android-app/src/main/cpp/lsp-plugins/src/core/util/: Analyzer.cpp  Bypass.cpp  Color.cpp  Convolver.cpp  Crossfade.cpp  Crossover.cpp  Delay.cpp  Depopper.cpp  Dither.cpp  DynamicDelay.cpp  LatencyDetector.cpp  MeterGraph.cpp  Oscillator.cpp  Oversampler.cpp  Randomizer.cpp  ResponseTaker.cpp  ShiftBuffer.cpp  Sidechain.cpp  SpectralProcessor.cpp  SyncChirpProcessor.cpp  Toggle.cpp  Trigger.cpp
android-app/src/main/cpp/lsp-plugins/src/dsp/: COMPARE_PORT_SUMMARY.md  COPY_PORT_SUMMARY.md  DELAY_PORT_NOTE.md  DELAY_PORT_SUMMARY.md  DSP_PORT_SUMMARY.md  PORTING_NOTES.md  alloc.cpp  bits.cpp  compare.cpp  dsp.cpp  native.cpp
android-app/src/main/java/com/example/lspandroid/: AppState.kt  MainActivity.kt  SimpleMainActivity.kt
android-app/src/main/java/com/example/lspandroid/aap/: AapGuiExtension.kt  LspAapService.kt
android-app/src/main/java/com/example/lspandroid/audio/: AudioEngine.kt  EqualizerSettings.kt
android-app/src/main/java/com/example/lspandroid/features/: ExportManager.kt  UndoRedoManager.kt
android-app/src/main/java/com/example/lspandroid/logging/: ErrorLogger.kt
android-app/src/main/java/com/example/lspandroid/model/: AudioSettings.kt  PluginChain.kt  PluginInfo.kt  PluginMetadata.kt  PluginParameter.kt  PortMetadata.kt  PortMetadataParser.kt  Preset.kt  README.md
android-app/src/main/java/com/example/lspandroid/repository/: PluginRepository.kt  PreferencesRepository.kt
android-app/src/main/java/com/example/lspandroid/ui/: ComposeExtensions.kt  LayoutConfigs.kt  LayoutGenerator.kt  LayoutOverrideManager.kt  MainScreen.kt  OnboardingScreen.kt  PluginBrowser.kt  SettingsScreen.kt
android-app/src/main/java/com/example/lspandroid/ui/components/: AnimatedControls.kt  LspGraphs.kt  (+1 more)
android-app/src/main/java/com/example/lspandroid/utils/: Logger.kt  PerformanceMonitor.kt
android-app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/src/main/res/mipmap-anydpi-v33/: ic_launcher.xml
android-app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/src/main/res/xml/: aap_metadata.xml  backup_rules.xml
android-app/src/test/cpp/: ParameterQueueTest.cpp
android-app/src/test/java/com/example/lspandroid/bugfix/: KotlinCompilationBugConditionTest.kt  KotlinCompilationPreservationTest.kt
android-app/src/test/java/com/example/lspandroid/model/: PluginChainTest.kt  PortMetadataTest.kt  PresetTest.kt
android-app/src/test/java/com/example/lspandroid/ui/: LayoutGeneratorTest.kt
dsp-core/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lsp_android_bridge.cpp  lsp_android_bridge.h  lsp_android_bridge_minimal.cpp
dsp-core/tests/: PLUGIN_DESTROY_VERIFICATION.md  README.md  eq_test_harness.cpp  native_test_harness  native_test_harness.cpp  regression_test  regression_test_eq.cpp  test_plugin_destroy.cpp
(+4 files in other folders)
